--- a/Tidbits.xcodeproj/xcshareddata/xcschemes/Tidbits Documentation.xcscheme
+++ b/Tidbits.xcodeproj/xcshareddata/xcschemes/Tidbits Documentation.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0510"
+   LastUpgradeVersion = "0600"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -39,6 +39,15 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "4072B7E118415743003B7703"
+            BuildableName = "Tidbits Documentation"
+            BlueprintName = "Tidbits Documentation"
+            ReferencedContainer = "container:Tidbits.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
