--- a/Tidbits.xcodeproj/xcshareddata/xcschemes/Tidbits.xcscheme
+++ b/Tidbits.xcodeproj/xcshareddata/xcschemes/Tidbits.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0510"
+   LastUpgradeVersion = "0600"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -56,6 +56,15 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "408E88571768DEF6001B61E6"
+            BuildableName = "libTidbits.a"
+            BlueprintName = "Tidbits"
+            ReferencedContainer = "container:Tidbits.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
