--- a/Tidbits.xcodeproj/xcshareddata/xcschemes/TidbitsTestBase.xcscheme
+++ b/Tidbits.xcodeproj/xcshareddata/xcschemes/TidbitsTestBase.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0510"
+   LastUpgradeVersion = "0600"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -49,6 +49,15 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "4047B4A21805B42C0032BBA5"
+            BuildableName = "libTidbitsTestBase.a"
+            BlueprintName = "TidbitsTestBase"
+            ReferencedContainer = "container:Tidbits.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
