Revert "Use SYMROOT for the test report."
This reverts commit fb39781a5ea8b7ea098e376e78b899a28dee731f.

--- a/Tidbits.xcodeproj/xcshareddata/xcschemes/Tidbits.xcscheme
+++ b/Tidbits.xcodeproj/xcshareddata/xcschemes/Tidbits.xcscheme
@@ -56,7 +56,7 @@
          </EnvironmentVariable>
          <EnvironmentVariable
             key = "TBJUnitTestObserverReportDestination"
-            value = "${SYMROOT}/test-report.xml"
+            value = "${SRCROOT}/test-report.xml"
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
